package com.company;

import java.io.IOException;

public class Main extends Mechanic{

    public static void main(String[] args) throws IOException {
        launchMenu();
    }
}
