@startuml

title __LAB3UP's Class Diagram__\n

  namespace com.company {
    class com.company.Cakes {
    -String type_of_cake

    +good_staff(){redefines good_staff}
    +show_info(){redefines show_info}
    #String getType_of_cake()
    #void setType_of_cake(String type_of_cake)
    }
  }


  namespace com.company {
    class com.company.Eclock {
    -double display_diagonal

   +good_staff(){redefines good_staff}
   +show_info(){redefines show_info}
   #double getType_of_cake()
   #void setType_of_cake(double display_diagonal)
    }
  }


  namespace com.company {
    class com.company.Main {
    }
  }


  namespace com.company {
    class com.company.Mechanic {
    #void launchMenu()
    }
  }


  namespace com.company {
    abstract class com.company.Tovar {
    -String name
    -String article_number
    -int price

    + abstract void good_staff()
    + void show_info()
    + void setTovar(String name, String article_number,int price)
    + String getName()
    + void setName(String name)
    + String getArticle_number()
    + void setArticle_number(String article_number)
    + int getPrice()
    + void setPrice(int price)
    }
  }


  namespace com.company {
    class com.company.Working {
    #void  change_the_Product(ArrayList<Cakes> cakesArrayList, ArrayList<Eclock> eclockArrayList, BufferedReader reader)
    #void set_plus_eclocks(Eclock change_eclocks,BufferedReader reader)
    #void set_plus_cakes(Cakes change_cakes,BufferedReader reader)
    #void enter_the_Product(ArrayList<Cakes> cakesArrayList, ArrayList<Eclock> eclockArrayList, BufferedReader reader)
    #void show_all_products(ArrayList<Cakes> cakesArrayList, ArrayList<Eclock> eclockArrayList)
    #cheapest_thing(ArrayList<Cakes> cakesArrayList, ArrayList<Eclock> eclockArrayList)
    #void override_goodstuff(ArrayList<Cakes> cakesArrayList,ArrayList<Eclock> eclockArrayList,BufferedReader reader)
    -Cakes creat_Product_Cakes(BufferedReader reader)
    -Eclock creat_Product_Eclock(BufferedReader reader)
    }
  }


  com.company.Cakes -up-|> com.company.Tovar
  com.company.Eclock -up-|> com.company.Tovar
  com.company.Main -up-|> com.company.Mechanic
  com.company.Mechanic -up-|> com.company.Working
  com.company.Working .up.|> com.company.Tovar
  com.company.Working .up.|> com.company.Cakes
  com.company.Working .up.|> com.company.Eclock

right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml